Updates openapi spec
